deploy/deployment.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: zdb-portal-ui-deployment
  namespace: zdb
  labels:
    app: zdb-portal-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zdb-portal-ui
  template:
    metadata:
      labels:
        app: zdb-portal-ui
    spec:
      containers:
      - name: zdb-portal-ui
        image: registry.au-syd.bluemix.net/zdb-dev/zdb-portal-ui:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always                       
      imagePullSecrets:
      - name: zdb-secret
      serviceAccountName: zdb-account
      automountServiceAccountToken: true

  
  
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: public
  name: zdb-portal-ui-loadbalancer
  namespace: zdb
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: zdb-portal-ui
  type: ClusterIP
