deploy/ingresse.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  generation: 1
  name: zdb-portal-ui-ingress
  namespace: zdb
spec:
  rules:
  - host: console.zdb-dev.jp-tok.containers.mybluemix.net
    http:
      paths:
      - backend:
          serviceName: zdb-portal-ui-loadbalancer
          servicePort: 8080
        path: /
